<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray_2"
    android:orientation="vertical"
    tools:context="com.allin.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_rounded_white"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="invisible">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="45dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/all_in_login"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"/>

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_gray_border_transparent"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_rounded_gray_border_transparent"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="16sp"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="@color/black"/>

    </RelativeLayout>

</LinearLayout>
