...

    <!--YOUR PROFILE-->
    <string name="your_profile">Your Profile</string>

    <!--LOGIN ACTIVITY-->
    <string name="all_in_login">All-In Login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="error_no_network">Login failed. The Internet connection appears to be offline.</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="login_failed_enter_your_all_in_username_or_password">Login failed. Enter your All-In username/password.</string>
...
