...
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:orientation="horizontal"
                android:padding="@dimen/padding_ll_setting">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"/>

            </LinearLayout>

...
